force-app/main/default/objects/BrillioFC__Profile_Detail__c/BrillioFC__Profile_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Profile Detail</label>
    <nameField>
        <label>ForceClinic Profile Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Profile Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>