force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__ApexClassAccess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ApexClassAccess__c</fullName>
    <label>ApexClassAccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>