force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__AuthorApexPermission__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__AuthorApexPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorApexPermission</label>
    <type>Checkbox</type>
</CustomField>