force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__CustomizeApplication__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__CustomizeApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomizeApplication</label>
    <type>Checkbox</type>
</CustomField>