force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__IsApiEnabled__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsApiEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApiEnabled</label>
    <type>Checkbox</type>
</CustomField>