force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__IsCustom__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustom</label>
    <type>Checkbox</type>
</CustomField>