force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__IsSsoEnabled__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsSsoEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSsoEnabled</label>
    <type>Checkbox</type>
</CustomField>