force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__ManageUserPermission__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ManageUserPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManageUserPermission</label>
    <type>Checkbox</type>
</CustomField>