force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__UserType__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UserType__c</fullName>
    <label>UserType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>