force-app/main/default/objects/BrillioFC__Profile_Detail__c/fields/BrillioFC__ViewSetupPermission__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ViewSetupPermission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViewSetupPermission</label>
    <type>Checkbox</type>
</CustomField>